# FEA_Software

./: CMakeLists.txt  LICENSE  README.md  main.cpp
headers/: mesh.h  renderer.h  solver.h
headers/glad/: gl.h
models/: cuboid.geo  cuboid.geo.txt  cuboid.msh  dogbone.msh  dogbonebackup.stl
source/: mesh.cpp  renderer.cpp  solver.cpp
